mongodb connection created, swagger response handled
